Converted the app from Flask to Quart.

--- a/days/021-024-quart-async/your_turn/day_4/cityscape_api/requirements.txt
+++ b/days/021-024-quart-async/your_turn/day_4/cityscape_api/requirements.txt
@@ -1,5 +1,5 @@
 # Web framework requirements
-flask
+#flask
 
 # Calling services requirements
 requests
@@ -7,4 +7,6 @@ requests
 aiohttp
 aiodns
 cchardet
+
+quart
 
